# Audio-Source-Precheck

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  musicflow.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: project.mdc
.github/workflows/: ci-build.yml  manual-release.yml
musicflow/: __init__.py  config.py  main.py
musicflow/core/: __init__.py  duplicate_detector.py  export.py  fake_hires.py  ingest.py  metadata.py  musicbrainz.py
musicflow/ui/: __init__.py  analysis_panel.py  library_panel.py  logs_panel.py  main_window.py  settings_dialog.py  staging_panel.py
musicflow/ui/widgets/: __init__.py  file_table.py  spectrum_viewer.py
musicflow/utils/: __init__.py  file_utils.py  logging_utils.py
tests/: __init__.py  conftest.py  test_duplicate_detector.py  test_fake_hires.py  test_file_utils.py  test_ingest.py  test_metadata.py
